# jxh-manager/src/api/types.ts
@@ -63,6 +63,14 @@ export type JoinDecisionStatus = ApiSchemas['JoinDecisionStatus']
 export type JoinDecisionAction = ApiSchemas['JoinDecisionAction']
 export type JoinDecisionSource = ApiSchemas['JoinDecisionSource']
 export type AIParseStatus = ApiSchemas['AIParseStatus']
+export type AutomaticReview = ApiSchemas['AutomaticReview']
+export type JoinApprovalRuleState = ApiSchemas['JoinApprovalRuleState']
+export type MajorCodeEvidenceIndex = ApiSchemas['MajorCodeEvidenceIndex']
+export type MajorCodeEvidenceSample = ApiSchemas['MajorCodeEvidenceSample']
+export type MajorCodeEvidenceSamplePatch = ApiSchemas['MajorCodeEvidenceSamplePatch']
+export type MajorCodeEvidenceSampleList = ApiSchemas['MajorCodeEvidenceSampleList']
+export type MajorCodeEvidenceRebuildResult = ApiSchemas['MajorCodeEvidenceRebuildResult']
+export type AdmissionRosterStatus = ApiSchemas['AdmissionRosterStatus']
 export type JoinRequestSummary = ApiSchemas['JoinRequestSummary']
 export type JoinRequest = ApiSchemas['JoinRequest']
 export type JoinRequestList = ApiSchemas['JoinRequestList']
